--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
 #game {
   background-color: black;
   width: 100%;
-  max-width: 768px;
+  max-width: 576px;
   height: 100%;
+  max-height: 100vh;
 }
