--- a/style.css
+++ b/style.css
@@ -13,13 +13,14 @@ body {
 }
 
 #game {
-  background: #200122; /* fallback for old browsers */
-  background: -webkit-linear-gradient(to bottom, #6f0000, #200122); /* Chrome 10-25, Safari 5.1-6 */
+  background: #000000; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to top, #434343, #000000); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(
-    to bottom,
-    #6f0000,
-    #200122
+    to top,
+    #434343,
+    #000000
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
   width: 100%;
   max-width: 576px;
   height: 100%;
